Added link to new recipy

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         Odin Recipes
     </h1>
     <a href="recipes/chanterelle-risotto.html">Chanterelle Risotto</a>
+    <a href="recipes/pesto-pasta.html">Pesto Pasta</a>
 </body>
 </html>
