Added link to pancake recipe

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </h1>
     <a href="recipes/chanterelle-risotto.html">Chanterelle Risotto</a>
     <a href="recipes/pesto-pasta.html">Pesto Pasta</a>
+    <a href="recipes/swedish-pancakes.html">Swedish Pancakes</a>
 </body>
 </html>
