--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -28,7 +29,7 @@
             2 tablespoons olive oil
         </li>
         <li>
-            0.5 cup of chopped onion 
+            0.5 cup of chopped onion
         </li>
         <li>
             2.5 tablespoons of pesto (add more if wanted)
