--- a/recipes/swedish-pancakes.html
+++ b/recipes/swedish-pancakes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -29,7 +30,7 @@
             1.5 cups milk
         </li>
         <li>
-            0.75 cup all-purpose flour 
+            0.75 cup all-purpose flour
         </li>
         <li>
             1 tablespoon white sugar
